# DiskSpaceMon

./: MyMainWindow.ui  README.md
resources/: myresources.qrc
src/: CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h  main.cpp
